Call_Api_WorldBank + Excel Data Gouvernance
Api call worldbak for main indicator esg per country + excel dictionnary of this data

--- a/notebooks/api_call.ipynb
+++ b/notebooks/api_call.ipynb
@@ -6,90 +6,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Installer les bibliothèques nécessaires si elles ne sont pas déjà installées\n",
-    "!pip install pandas requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mLe noyau s’est bloqué lors de l’exécution du code dans une cellule active ou une cellule précédente. \n",
-      "\u001b[1;31mVeuillez vérifier le code dans la ou les cellules pour identifier une cause possible de l’échec. \n",
-      "\u001b[1;31mCliquez <a href='https://aka.ms/vscodeJupyterKernelCrash'>ici</a> pour plus d’informations. \n",
-      "\u001b[1;31mPour plus d’informations, consultez Jupyter <a href='command:jupyter.viewOutput'>log</a>."
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
     "import requests\n",
     "import pandas as pd\n",
     "\n",
-    "# Func recup world bank data indicator\n",
     "def get_world_bank_data(indicator_code, country='all', format_type='json', date_range='2010:2021'):\n",
     "    \"\"\"\n",
-    "    Récupère les données de l'indicateur donné pour tous les pays ou un pays spécifique\n",
-    "    sur la période spécifiée.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    - indicator_code (str): Code de l'indicateur.\n",
-    "    - country (str): Code du pays (par défaut 'all' pour tous les pays).\n",
-    "    - format_type (str): Format de la réponse (par défaut 'json').\n",
-    "    - date_range (str): Plage de dates (par défaut '2010:2021').\n",
-    "    \n",
-    "    Returns:\n",
-    "    - pd.DataFrame: DataFrame contenant les données de l'indicateur.\n",
+    "    Fetch data from the World Bank v2 API for a given indicator code.\n",
     "    \"\"\"\n",
     "    url = f\"https://api.worldbank.org/v2/country/{country}/indicator/{indicator_code}?date={date_range}&format={format_type}&per_page=500\"\n",
     "    response = requests.get(url)\n",
     "    \n",
     "    if response.status_code != 200:\n",
-    "        print(f\"Erreur : Impossible de récupérer les données pour {indicator_code}\")\n",
-    "        return pd.DataFrame()\n",
+    "        print(f\"Erreur HTTP : Impossible de récupérer les données pour {indicator_code}. Statut {response.status_code}\")\n",
+    "        return None\n",
     "    \n",
-    "    data = response.json()[1]  # Les données sont dans la deuxième partie de la réponse JSON\n",
-    "    df = pd.json_normalize(data)\n",
-    "    df = df[['country.value', 'date', 'value']]  # Garde seulement le pays, la date, et la valeur\n",
-    "    df.columns = ['Country', 'Year', 'Value']  # Renomme les colonnes pour plus de clarté\n",
-    "    \n",
-    "    return df\n",
+    "    try:\n",
+    "        data = response.json()\n",
+    "        if isinstance(data, list) and len(data) > 1:\n",
+    "            df = pd.json_normalize(data[1])\n",
+    "            df = df[['country.value', 'date', 'value']]\n",
+    "            df.columns = ['Country', 'Year', 'Value']\n",
+    "            return df\n",
+    "        else:\n",
+    "            print(f\"Erreur de structure de données pour l'indicateur {indicator_code}: {data}\")\n",
+    "            return None\n",
+    "    except ValueError:\n",
+    "        print(f\"Erreur : La réponse de l'API pour {indicator_code} n'est pas en JSON valide.\")\n",
+    "        return None\n",
     "\n",
-    "# Codes des indicateurs ESG pour Environnement, Social et Gouvernance\n",
+    "# List of comprehensive ESG indicators for v2 API\n",
     "indicators = {\n",
+    "    # Environment Indicators\n",
+    "    'CO2 Emissions (kt)': 'EN.ATM.CO2E.KT',\n",
     "    'CO2 Emissions (metric tons per capita)': 'EN.ATM.CO2E.PC',\n",
-    "    'Renewable Energy Consumption (% of total final energy consumption)': 'EG.FEC.RNEW.ZS',\n",
+    "    'CO2 Emissions per GDP (kg per PPP $)': 'EN.ATM.CO2E.PP.GD',\n",
+    "    'Methane Emissions (kt of CO2 equivalent)': 'EN.ATM.METH.KT.CE',\n",
+    "    'Nitrous Oxide Emissions (kt of CO2 equivalent)': 'EN.ATM.NOXE.KT.CE',\n",
+    "    'Greenhouse Gas Emissions (CO2 equivalent)': 'EN.ATM.GHGT.KT.CE',\n",
+    "    'Renewable Energy Consumption (% of total energy consumption)': 'EG.FEC.RNEW.ZS',\n",
     "    'Forest Area (% of land area)': 'AG.LND.FRST.ZS',\n",
-    "    'Access to Safe Water (% of population)': 'SH.H2O.SAFE.ZS',\n",
+    "    'Energy Use (kg of oil equivalent per capita)': 'EG.USE.PCAP.KG.OE',\n",
+    "    'Annual Change in Forest Area (%)': 'AG.LND.FRST.K2',\n",
+    "    'Electricity Access (% of population)': 'EG.ELC.ACCS.ZS',\n",
+    "\n",
+    "    # Social Indicators\n",
+    "    'Access to Safe Water (% of population)': 'SH.H2O.BASW.ZS',\n",
     "    'Life Expectancy at Birth': 'SP.DYN.LE00.IN',\n",
     "    'Primary School Enrollment (% gross)': 'SE.PRM.ENRR',\n",
-    "    'Access to Health Services (% of population)': 'SH.ACC.SERV',\n",
-    "    'Unemployment Rate (% of total labor force)': 'SL.UEM.TOTL.ZS'\n",
+    "    'Access to Health Services': 'SH.STA.BRTC.ZS',\n",
+    "    'Unemployment Rate (% of total labor force)': 'SL.UEM.TOTL.ZS',\n",
+    "    'Poverty Headcount Ratio (% of population below $1.90/day)': 'SI.POV.DDAY',\n",
+    "    'Youth Literacy Rate (% ages 15-24)': 'SE.ADT.1524.LT.ZS',\n",
+    "    'Female Labor Force Participation Rate (% of female population ages 15+)': 'SL.TLF.CACT.FE.ZS',\n",
+    "\n",
+    "    # Governance Indicators\n",
+    "    'Control of Corruption (index)': 'CC.EST',\n",
+    "    'Government Effectiveness (index)': 'GE.EST',\n",
+    "    'Regulatory Quality (index)': 'RQ.EST',\n",
+    "    'Political Stability and Absence of Violence (index)': 'PV.EST',\n",
+    "    'Rule of Law (index)': 'RL.EST'\n",
     "}\n",
     "\n",
-    "# Récupération des données pour chaque indicateur\n",
+    "# Fetch data for each indicator using the v2 API\n",
     "esg_data = {}\n",
     "for name, code in indicators.items():\n",
     "    print(f\"Récupération des données pour l'indicateur : {name}\")\n",
-    "    esg_data[name] = get_world_bank_data(code)\n",
+    "    result = get_world_bank_data(code)\n",
+    "    esg_data[name] = result\n",
+    "    \n",
+    "    if result is not None:\n",
+    "        print(f\"Données récupérées avec succès pour {name}. Aperçu :\")\n",
+    "        print(result.head())\n",
+    "    else:\n",
+    "        print(f\"Aucune donnée disponible pour l'indicateur : {name}\")\n",
     "\n",
-    "# Afficher un exemple pour un indicateur\n",
-    "indicator_example = 'CO2 Emissions (metric tons per capita)'\n",
-    "print(f\"\\nDonnées pour l'indicateur : {indicator_example}\")\n",
-    "esg_data[indicator_example].head()\n"
+    "# Summary of retrieved data\n",
+    "print(\"\\nRésumé des indicateurs ESG récupérés :\")\n",
+    "for name, df in esg_data.items():\n",
+    "    if df is not None:\n",
+    "        print(f\"{name} - {len(df)} lignes récupérées\")\n",
+    "    else:\n",
+    "        print(f\"{name} - Aucune donnée\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "GreenMetric",
+   "display_name": "GreenMetricNew",
    "language": "python",
    "name": "python3"
   },
